--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="fontawesome/css/fontawesome.css" rel="stylesheet">
-    <link href="fontawesome/css/brands.css" rel="stylesheet">
-    <link href="fontawesome/css/solid.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/196d273f05.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>Kerbalism Science data</title>
 </head>
