Updated last few parts

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p>Kerbalism is available from <a href="https://github.com/Kerbalism/Kerbalism">GitHub</a> and
                 downloadable
                 from <a href="https://github.com/KSP-CKAN/CKAN/wiki">Ckan</a></p>
-            <p>This page contains a list of science experiments available with Kerbalism, including <span
-                    class="soon">Soon</span> which parts are required on your craft to achieve results</p>
+            <p>This page contains a list of science experiments available with Kerbalism, including which parts are
+                required on your craft to achieve results</p>
             <p>If you find any details wrong or would like something added, contact me via <a
                     href="https://twitter.com/darren_colson"><i class="fa-brands fa-twitter" style="color:#1DA1F2"></i>
                     Twitter</a></p>
