updated color scheme. added meta data

--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
 
         gtag('config', 'G-R64PF9SGSQ');
     </script>
+    <!-- General setup -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Kerbalism Science data</title>
+    <meta name="description"
+        content="Interactive list of all the science experiments available in the Kerbalism mod for Kerbal Space Program. Details include all requirements and parts needed to complete experiments.">
+    <meta name="robot" content="index,follow">
+    <meta name="keywords"
+        content="kerbal space program,kerbal,space,program,ksp,cheat sheet,data sheet,cheat,data,mun,minmus,kerbin,kerbal,duna,eve,moho,gilly,ike,kerbalism,eva report,eva,beep,ding,gravity">
+    <!-- OPEN GL META DATA FOR SOCIAL MEDIA -->
+    <meta property="og:title" content="Kerbalism Science data" />
+    <meta property="og:description"
+        content="Interactive list of all the science experiments available in the Kerbalism mod for Kerbal Space Program. Details include all requirements and parts needed to complete experiments." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kerbalism-science.netlify.app/" />
+    <meta property="og:image" content="https://kerbalism-science.netlify.app//images/screenshot-meta.png" />
+
     <script src="https://kit.fontawesome.com/196d273f05.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
-    <title>Kerbalism Science data</title>
 </head>
 
 <body onload="fetchData()">
