changed color scheme

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 
     <section class="presentation">
         <header>
-            <h1>Kerbalism science experiment chart</h1>
+
+            <h1>
+                Kerbalism <img src="favicon.svg" alt="icon"
+                    style="display:inline-block;height:0.4em;filter: invert(48%) sepia(94%) saturate(2050%) hue-rotate(178deg) brightness(102%) contrast(90%);translate:0 -0.5em;">
+                science experiment chart
+            </h1>
             <p>Kerbalism is a mod available for <a
                     href="https://store.steampowered.com/app/220200/Kerbal_Space_Program/"> Kerbal Space Program
                     1.</a>
@@ -51,6 +56,8 @@
             <p>If you find any details wrong or would like something added, contact me via <a
                     href="https://twitter.com/darren_colson"><i class="fa-brands fa-twitter" style="color:#1DA1F2"></i>
                     Twitter</a></p>
+            <p>For information on planets and bodies in KSP including shadow times, check out my other web app <a
+                    href="https://ksp-planet-data.netlify.app/">https://ksp-planet-data.netlify.app/</a></p>
         </header>
         <div class="science-list" id="science-list">
 
